[gd_scene load_steps=3 format=3 uid="uid://cr0tbdqk5lf3p"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_game_manager"]

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(50, 0.5, 50)

[node name="Main" type="Node3D"]
script = ExtResource("1_game_manager")

[node name="SbxRuntime" type="SbxRuntime" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("BoxMesh_floor")

[node name="LobbyArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)

[node name="ArenaArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UILayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Tag - Multiplayer Demo"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="UILayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Your Name:"

[node name="NameInput" type="LineEdit" parent="UILayer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Player"

[node name="AddressLabel" type="Label" parent="UILayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Server Address:"

[node name="AddressInput" type="LineEdit" parent="UILayer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="HostButton" type="Button" parent="UILayer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="UILayer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Game"

[node name="GameUI" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="UILayer/GameUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 50.0
text = "Waiting..."

[node name="PlayerList" type="ItemList" parent="UILayer/GameUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 200.0
